# pydoocs

./: .dockerignore  .gitignore  CMakeLists.txt  CPPLINT.cfg  Dockerfile  README.md  Setupfile  TODO  TODO.txt  setup.py
python2/include/: AbstractBaseBuilder.h  AbstractBaseException.h  BooleanBuilder.h  ByteArrayBuilder.h  DoocsException.h  DoubleArrayBuilder.h  DoubleBuilder.h  FloatArrayBuilder.h  FloatBuilder.h  GspectrumBuilder.h  IfffBuilder.h  IiiiBuilder.h  ImageBuilder.h  IntegerArrayBuilder.h  IntegerBuilder.h  LongArrayBuilder.h  LongBuilder.h  MdaFloatArrayBuilder.h  NamesBuilder.h  PyDoocsException.h  ShortArrayBuilder.h  SpectrumBuilder.h  StringBuilder.h  TdsArrayBuilder.h  TextBuilder.h  TsDoubleArrayBuilder.h  TsFloatArrayBuilder.h  UstrArrayBuilder.h  XyArrayBuilder.h  XyzsArrayBuilder.h  build_util.h  parse_util.h  py_object_builder.h  pydoocs.h  pydoocs_names.h  pydoocs_read.h  pydoocs_write.h  sync_util.h
python2/src/: AbstractBaseBuilder.tcc  AbstractBaseException.cc  BooleanBuilder.cc  DoubleBuilder.cc  FloatArrayBuilder.cc  FloatBuilder.cc  GspectrumBuilder.cc  IfffBuilder.cc  IiiiBuilder.cc  ImageBuilder.cc  IntegerBuilder.cc  LongArrayBuilder.cc  LongBuilder.cc  MdaFloatArrayBuilder.cc  NamesBuilder.cc  PyDoocsException.cc  ShortArrayBuilder.cc  SpectrumBuilder.cc  StringBuilder.cc  TextBuilder.cc  TsDoubleArrayBuilder.cc  TsFloatArrayBuilder.cc  XyzsArrayBuilder.cc  build_util.cc  parse_util.cc  py_object_builder.cc  pydoocs.cc  pydoocs_names.cc  pydoocs_read.cc  pydoocs_write.cc  sync_util.cc
python3/include/: AbstractBaseBuilder.h  AbstractBaseException.h  BooleanBuilder.h  ByteArrayBuilder.h  DoocsException.h  DoubleArrayBuilder.h  DoubleBuilder.h  FloatArrayBuilder.h  FloatBuilder.h  GspectrumBuilder.h  IfffBuilder.h  IiiiBuilder.h  ImageBuilder.h  IntegerArrayBuilder.h  IntegerBuilder.h  LongArrayBuilder.h  LongBuilder.h  MdaFloatArrayBuilder.h  NamesBuilder.h  PyDoocsException.h  ShortArrayBuilder.h  SpectrumBuilder.h  StringBuilder.h  TdsArrayBuilder.h  TextBuilder.h  TsDoubleArrayBuilder.h  TsFloatArrayBuilder.h  UstrArrayBuilder.h  XyArrayBuilder.h  XyzsArrayBuilder.h  build_util.h  parse_util.h  py_object_builder.h  pydoocs.h  pydoocs_names.h  pydoocs_read.h  pydoocs_write.h  sync_util.h
python3/src/: AbstractBaseBuilder.cc  AbstractBaseBuilder.tcc  AbstractBaseException.cc  BooleanBuilder.cc  ByteArrayBuilder.cc  DoocsException.cc  DoubleArrayBuilder.cc  DoubleBuilder.cc  FloatBuilder.cc  ImageBuilder.cc  IntegerArrayBuilder.cc  IntegerBuilder.cc  LongBuilder.cc  ShortArrayBuilder.cc  StringBuilder.cc  TdsArrayBuilder.cc  TextBuilder.cc  TsDoubleArrayBuilder.cc  TsFloatArrayBuilder.cc  UstrArrayBuilder.cc  XyArrayBuilder.cc  build_util.cc  py_object_builder.cc  pydoocs.cc  pydoocs_names.cc  pydoocs_read.cc  pydoocs_write.cc  sync_util.cc
src/: hello.cpp
tests/: pydoocs_module_test.py
